success upload to cloudinary

--- a/clypt-backend/src/main/resources/application.properties
+++ b/clypt-backend/src/main/resources/application.properties
@@ -16,3 +16,15 @@ spring.jpa.show-sql=true
 cloudinary.cloudName=${CLOUDINARY_CLOUD_NAME}
 cloudinary.apiKey=${CLOUDINARY_API_KEY}
 cloudinary.apiSecret=${CLOUDINARY_API_SECRET}
+
+# Folder Names
+folder.anonymous=anonymous
+
+# Base Directory
+base.directory=uploads
+
+# Maximum file size (for each file)
+spring.servlet.multipart.max-file-size=100MB
+
+# Maximum request size (total size of all files in the request)
+spring.servlet.multipart.max-request-size=500MB
