--- a/clypt-backend/src/main/resources/application.properties
+++ b/clypt-backend/src/main/resources/application.properties
@@ -2,14 +2,24 @@ spring.application.name=clypt-backend
 
 
 # Local Connection h2 database
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
 
+#PostgreSQL connection Config
+spring.datasource.url=${DATABASE_CONNECTION_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+# PostgreSQL driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # Hibernate Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Cron Config
+spring.task.scheduling.enabled=true
 
 
 # Cloudinary Config
