local uploading testing done

--- a/clypt-backend/src/main/resources/application.properties
+++ b/clypt-backend/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 spring.application.name=clypt-backend
 
-
-# Local Connection h2 database
-#spring.h2.console.enabled=true
-
-#PostgreSQL connection Config
+# PostgreSQL connection Config
 spring.datasource.url=${DATABASE_CONNECTION_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -38,3 +34,9 @@ spring.servlet.multipart.max-file-size=100MB
 
 # Maximum request size (total size of all files in the request)
 spring.servlet.multipart.max-request-size=500MB
+
+
+# Handle Type
+file.handler=server
+
+
