implement zip file download

--- a/clypt-backend/src/main/resources/application.properties
+++ b/clypt-backend/src/main/resources/application.properties
@@ -29,6 +29,12 @@ folder.anonymous=anonymous
 # Base Directory
 base.directory=uploads
 
+# Encryption Enabling
+encryption.enabled=true
+
+# Enable Parallel Coding
+parallel.threshold=2
+
 # Maximum file size (for each file)
 spring.servlet.multipart.max-file-size=100MB
 
