--- a/clypt-backend/src/main/resources/application.properties
+++ b/clypt-backend/src/main/resources/application.properties
@@ -44,6 +44,18 @@ spring.servlet.multipart.max-file-size=100MB
 # Maximum request size (total size of all files in the request)
 spring.servlet.multipart.max-request-size=500MB
 
+# Maximum time (in milliseconds) a connection can stay alive in the pool(4 minutes)
+spring.datasource.hikari.max-lifetime=240000   
+
+# Maximum idle time (in milliseconds) before a connection is removed from the pool(2 minutes)
+spring.datasource.hikari.idle-timeout=120000  
+
+# Minimum number of idle connections the pool tries to maintain
+spring.datasource.hikari.minimum-idle=1
+
+# Maximum number of connections allowed in the connection pool
+spring.datasource.hikari.maximum-pool-size=5
+
 
 
 
